[package]
name = "js8-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
regex = "1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
lazy_static = "1.4.0"
bitvec="1"
futuresdr = { path = "../FutureSDR", features = ["audio"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.4.1"
async-fs = "1.5.0"
async-io = "1.6.0"
async-lock = "2.4.0"
async-net = "1.5.0"
async-task = "4.0.3"
async-tungstenite = "0.17.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
async-channel = "1.6.1"
async-executor = "1.3.0"
rand = "0.6.5"


[lib]
crate-type = ["rlib"]

[[bin]]
name = "modulator"
path = "src/modulator.rs"